...
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold"
            tools:text="@string/dialog_title_date_sample" />

        <Spinner
            android:id="@+id/dialog_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_filter_title"
            android:layout_margin="@dimen/default_big"
            android:padding="@dimen/default_big" />

...
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_big"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/dialog_filter_accept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
...
