<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_extra_big"
            android:text="@string/add_toolbar"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_hall_selection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/add_meeting_hall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_schedule_date_selection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_meeting_schedule_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_meeting_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_schedule_time_selection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_meeting_schedule_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_meeting_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_subject"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/add_meeting_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_subject_sample"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_participants"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/add_meeting_participants_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_circle_outline_blue_24dp"/>

                    <EditText
                        android:id="@+id/add_meeting_participants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_minus_small"
                        android:hint="@string/meeting_participants_sample"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/add_meeting_participants_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <Button
                android:id="@+id/add_meeting_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_meeting" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>